Fixed nav sizing issue on mobile

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -162,7 +162,7 @@ nav
     align-items: center
     justify-content: space-between
   li
-    width: 20%
+    width: 100%
     height: 20%
     &.active
       a
@@ -197,6 +197,7 @@ nav
       background: white
       border-bottom: 4px solid $putnam-gray
       li
+        width: 100%
         height: 100%
         margin: 0 1px 0 0
         &:nth-child(5)
